--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/utest.h"]
-	path = libs/utest.h
+[submodule "include/utest"]
+	path = include/utest
 	url = https://github.com/sheredom/utest.h.git
