--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 3.28)
+cmake_minimum_required(VERSION 3.26)
 enable_language(ASM C)
 set(CMAKE_C_STANDARD 99)
 
 file(GLOB headers "*.h")
 set(sources
   sched.c
-  asm_${CMAKE_SYSTEM_PROCESSOR}.S
-  sys_${CMAKE_SYSTEM_NAME}.c
+  asm_${GOARCH}.S
+  sys_${GOSYS}.c
 )
 
 add_library(core STATIC ${headers} ${sources})
